--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 
-<body style="margin: 0;">
+<body style="margin: 0;background-color: #e4e4e4;">
 
   
 <script src="js/three.min.js"></script>
