--- a/index.html
+++ b/index.html
@@ -1,21 +1,367 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Money prototype in three.js</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Daniel Zhou Portfolio</title>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300|Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/gallery.css">
+
 </head>
 
-<body style="margin: 0;background-color: #e4e4e4;">
-
+<body>
+  <!--header-->
+  <header class="main-header" id="header">
+    <div class="bg-color">
+      <!--nav-->
+      <nav class="nav navbar-default navbar-fixed-top">
+        <div class="container">
+          <div class="col-md-12">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="fa fa-bars"></span>
+                        </button>
+              <a href="index.html" class="navbar-brand">DZ</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right" id="mynavbar">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#header">Home</a></li>
+                <li><a href="#feature">Introduction</a></li>
+                <li><a href="#data">Data</a></li>
+                <li><a href="#reporting">Reporting</a></li>
+                <li><a href="#interactive">Interactive</a></li>
+                <li><a href="#cta-2">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!--/ nav-->
+      <div class="container text-center">
+        <div class="wrapper wow fadeInUp delay-05s" style="height:700px;">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <h2 >Data Science · Journalism · Financial Economics</h4>
+          <h3 class="title">Daniel Zhou</h3>
+          <h4 class="sub-title">Playing with Data and Shapes</h4>
+          <a href="#cta-1"><button type="submit" class="btn btn-submit">explore</button></a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <!--/ header-->
+  <!---->
+  <br>
   
-<script src="js/three.min.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script  src="js/index.js"></script>
+  <section id="cta-1">
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="cta-info text-center" style="border-color: #AED6F1">
+          <h3><span class="dec-tec">“</span>Stories are data with a soul.<span class="dec-tec">”</span></h3>
+        </div>
+      </div>
+    </div>
+    <br>
 
+  </section>
+  <!---->
+  <!---->
+  <section id="feature" class="section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 wow fadeInLeft delay-05s">
+          <div class="section-title">
+          <img src="img/daniel.jpg"/>
+                      <br>
+            <hr class="botm-line">
+            <p class="sec-para">Hi there!</p>
+            <p class="sec-para">I am a rising senior at Northwestern University studying <strong>journalism, statistics, and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
+<p>I am an interdisciplinary problem solver interested in the crossroad of quantitative analysis and qualitative storytelling. </p>
+          </div>
+        </div>
+        <div id="introduction" class="col-md-9">
+          <div class="col-md-6 wow fadeInRight delay-02s">
+            <div class="icon">
+              <i class="fa fa-bar-chart"></i>
+            </div>
+            <div class="icon-text">
+              <h3 class="txt-tl">Statistical Analysis</h3>
+              <p class="txt-para">- Proficient in <strong>R, Python, Excel, Tableau, SAS, SQL, Stata, ArcGIS</strong> </p>
+              <p class="txt-para">- Experienced in areas of data analytics such as <strong>predictive modeling, classification, clustering</strong></p>
+            </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-02s">
+            <div class="icon">
+              <i class="fa fa-camera-retro"></i>
+            </div>
+            <div class="icon-text">
+              <h3 class="txt-tl">Multimedia Production</h3>
+              <p class="txt-para">- In progress of the intensive journalism training at Medill School of Journalism</p>
+              <p class="txt-para">- Expertise and interests in <strong>photography, infographic design, interactive and data journalism</strong></p>
+            </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-04s">
+            <div class="icon">
+              <i class="fa fa-money"></i>
+            </div>
+            <div class="icon-text">
+              <h3 class="txt-tl">Investment Research</h3>
+              <p class="txt-para">- Professional experience in <strong>Investment and M&A Research with CapitalIQ and CRSP</strong> at Morningstar, CDI Global and Kellogg School of Management</p>
+              <p class="txt-para">- Member of <strong>the Financial Economics Certificate Program</strong>, the most competitive and selective undergraduate academic curriculum on campus </p>
+            </div>
+          </div>
+          <div class="col-md-6 wow fadeInRight delay-04s">
+            <div class="icon">
+              <i class="fa fa-globe"></i>
+            </div>
+            <div class="icon-text">
+              <h3 class="txt-tl">International Background</h3>
+              <p class="txt-para">- An international student born in Shanghai, China and a global citizen in practice who has been to more than 15 countries</p>
+              <p class="txt-para">- Native proficiency in <strong>Mandarin and Shanghainese</strong>, and communicative in <strong>French</strong></p>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+  </section>
+  <!---->
+  <section class="section-padding parallax bg-image-2 section wow fadeIn delay-08s" id="cta-2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <div class="cta-txt">
+            <h3>Contact Me</h3>
+            <p>Send me an email if you are interested in my expertise and experiences.</p>
+          </div>
+        </div>
+        <div class="col-md-4 text-center">
+          <a href="mailto:danielzhou2019@u.northwestern.edu" target="new" class="btn btn-submit"><i class="fa fa-envelope-o"></i>    Email Daniel</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!---->
+  <!---->
+  <section class="section-padding wow fadeInUp delay-02s" id="portfolio">
 
+         <div class="container" id="data">
+      <div class="row">
+        <div class="col-md-3 col-sm-12">
+          <div class="section-title">
+            <h2 class="head-title">Data Projects</h2>
+            <hr class="botm-line">
+            <p class="sec-para">Data Science analytics projects, conducted through R, js, blender, html.</p>
+          </div>
+        </div>
+        <div class="col-md-9 col-sm-12">
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://drive.google.com/file/d/1h5SNucAh5E_W_6qIg6mp_f4UZ4bN7EGz/view?usp=sharing" target="new"><img src="img/bike.jpg" alt="" class="img-responsive" style="padding:7px;" width=""></a>
+              <p> <strong>Presentation:</strong> Bikeshare data Regression Model Analysis</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://danielzzhou.github.io/bikeshare/" target="new"><img src="img/capbikeshare.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Code:</strong> Bikeshare Regression Model Cross Validation Markdown</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://studio.knightlab.com/projects/augmented-reality-visualization-tool/" target="new"><img src="img/ar.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>API: </strong> AR Data Visualization Tool (Under Development)</p>
+            </div>
+          </div>
+          </div>
+ 
+          </div>
+        </div>
 
+            <br>
+            <br>
+
+            <div class="container" id="design">
+      <div class="row">
+        <div class="col-md-3 col-sm-12">
+          <div class="section-title">
+            <h2 class="head-title">Design</h2>
+            <hr class="botm-line">
+            <p class="sec-para">Examples of my graphic design works including poster, banner and logo design.</p>
+          </div>
+        </div>
+        <div class="col-md-9 col-sm-12">
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="img/star.jpg" target="new"><img src="img/star-1.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p><strong>Poster/ Logo Design</strong>: Counting Stars</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="img/classix.jpg" target="new"><img src="img/classix-1.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Logo</strong>: Classix Story App</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="img/je.jpg" target="new"><img src="img/je-1.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Banner</strong>: Junior Executive Announcement</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="img/mentor.jpg" target="new"><img src="img/mentor-1.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Poster</strong>: Freshman Mentor Program</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="img/jabber.jpg" target="new"><img src="img/jabber.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p><strong> Logo</strong>: Jabber Story Cubes</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="img/square.jpg" target="new"><img src="img/square-1.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p><strong> Poster</strong>: Senior Panel </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <br>
+    <br>
+
+    <div class="container" id="reporting">
+      <div class="row">
+        <div class="col-md-3 col-sm-12">
+          <div class="section-title">
+            <h2 class="head-title">Multimedia Production</h2>
+            <hr class="botm-line">
+            <p class="sec-para">Selection of my journalism works including photojournalism, personal-narrative writing, infographics and feature reporting.</p>
+          </div>
+        </div>
+        <div class="col-md-9 col-sm-12">
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="name/name.html" target="new"><img src="img/name.gif" alt="" class="img-responsive" style="padding:7px;" width:"1020px" height="780px" ></a>
+              <p><strong> Narrative reporting</strong>: International Student Name Story</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://medium.com/@danielzhou_70172/embarking-on-student-startups-pots-of-gold-or-bursting-bubbles-9957e294e257" target="new"><img src="img/startup.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Feature reporting</strong>: Student Startup</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://northwesternbusinessreview.org/sustainable-investing-how-esg-is-no-longer-a-new-buzzword-for-millennial-investors-eec03c2c220a" target="new"><img src="img/sustainable.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Infographics</strong>: Sustainable Investing and Environmental Index</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://northwesternbusinessreview.org/sports-expense-and-revenue-at-nu-e6bc6a595d14" target="new"><img src="img/sports.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Infographics</strong>: NU Sports Expense and Revenue</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="https://www.shine.cn/archive/business/it/More-freedom-set-for-booming-game-market/shdaily.shtml" target="new"><img src="img/game.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p><strong> Business reporting</strong>: Booming Game Market</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="http://www.scmp.com/business/companies/article/1971837/esg-new-buzzword-listed-fims-investors-hk-asia-regulations" target="new"><img src="img/esg.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> Assistance business reporting: ESG Regulation</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+       <div class="container" id="interactive">
+      <div class="row">
+        <div class="col-md-3 col-sm-12">
+          <div class="section-title">
+            <h2 class="head-title">Interactive Journalism</h2>
+            <hr class="botm-line">
+            <p class="sec-para">Highlights of my class works from Journalism 320: Interactive Storytelling.</p>
+          </div>
+        </div>
+        <div class="col-md-9 col-sm-12">
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="http://www.medillnews847.com/jour320/spring18/zhou/midterm/midterm.html" target="new"><img src="img/tony.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Digital Package</strong>: Tony Awards Nomination and Northwestern</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="http://www.medillnews847.com/jour320/spring18/zhou/dataviz/school.html" target="new"><img src="img/cps.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> Data Visualization: Competitive Admissions in Chicago Public Schools</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="http://www.medillnews847.com/jour320/spring18/zhou/jq.html" target="new"><img src="img/steven.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> JQuery: Steven Spielberg to Produce his First DC Comic Film</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 padding-right-zero">
+            <div class="portfolio-box design">
+              <a href="http://www.medillnews847.com/jour320/spring18/zhou/csshw.html" target="new"><img src="img/paul.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> CSS box model: Paul Ryan Quits Seeking Re-election</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+  <!---->
+  <!---->
+
+  <!---->
+  <!---->
+  <footer class="" id="footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5 footer-social">
+          <div class="pull-right hidden-xs hidden-sm">
+            <a href="https://www.linkedin.com/in/daniel-zhiheng-zhou-13815110b/" target="new"><i class="fa fa-linkedin"></i></a>
+            <a href="https://github.com/danielzzhou" target="new"><i class="fa fa fa-github"></i></a>
+            <a href="https://www.facebook.com/zhou.daniel.14" target="new“><i class="fa fa-facebook"></i></a>
+            <a href="mailto:danielzhou2019@u.northwestern.edu" target="new"><i class="fa fa-envelope-o"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!---->
+  <!--contact ends-->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery.easing.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/custom.js"></script>
+  <script src="contactform/contactform.js"></script>
+  <script src="js/gallery.js"></script>
 
 </body>
-
 </html>
-
