--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <li><a href="#feature">Introduction</a></li>
                 <li><a href="#data">Data</a></li>
                 <li><a href="#reporting">Reporting</a></li>
-                <li><a href="#interactive">Interactive</a></li>
                 <li><a href="#cta-2">Contact</a></li>
               </ul>
             </div>
@@ -86,7 +85,7 @@
                       <br>
             <hr class="botm-line">
             <p class="sec-para">Hi there!</p>
-            <p class="sec-para">I am a senior at Northwestern University studying <strong>statistics, journalism and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
+            <p class="sec-para">I am a senior at Northwestern University studying <strong> journalism, statistics and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
 <p>I am an interdisciplinary problem solver interested in the crossroad of quantitative analytics and qualitative storytelling. </p>
           </div>
         </div>
@@ -96,9 +95,9 @@
               <i class="fa fa-bar-chart"></i>
             </div>
             <div class="icon-text">
-              <h3 class="txt-tl">Statistical Analysis</h3>
-              <p class="txt-para">- Proficient in <strong>R, Python, SQL, Excel, Tableau, SAS, SQL, Stata, ArcGIS</strong> </p>
-              <p class="txt-para">- Experienced in areas of Machine Learning such as  <strong>predictive modeling, cluster analysi,
+              <h3 class="txt-tl">Data Analytics</h3>
+              <p class="txt-para">- Proficient in <strong>R, Python, SQL, Excel, Tableau, SAS, Stata, ArcGIS</strong> </p>
+              <p class="txt-para">- Experienced in areas of Machine Learning such as  <strong>predictive modeling, cluster analysis,
                 classification,</strong> and Data Quality Assurance </p>
             </div>
           </div>
@@ -109,7 +108,7 @@
             </div>
             <div class="icon-text">
               <h3 class="txt-tl">Investment Research</h3>
-              <p class="txt-para">- Professional experience in <strong>Quantitative Portfolio Analytics and M&A Research with Morningstar Direct,
+              <p class="txt-para">- Professional experience in <strong>Quantitative Portfolio Analytics and M&A Research with professional database such as Morningstar Direct,
                 CapitalIQ and CRSP</strong> through internship at Morningstar, CDI Global and Kellogg School of Management</p>
               <p class="txt-para">- Member of <strong>the Financial Economics Certificate Program</strong>, the most competitive and selective undergraduate academic curriculum on campus </p>
             </div>
@@ -174,7 +173,7 @@
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
               <a href="https://drive.google.com/file/d/1h5SNucAh5E_W_6qIg6mp_f4UZ4bN7EGz/view?usp=sharing" target="new"><img src="img/bike.jpg" alt="" class="img-responsive" style="padding:7px;" width=""></a>
-              <p> <strong>Presentation:</strong> Bikeshare data Regression Model Analysis</p>
+              <p> <strong>Presentation:</strong> Bikeshare Data Regression Model Analysis</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
@@ -206,22 +205,22 @@
       <div class="row">
         <div class="col-md-3 col-sm-12">
           <div class="section-title">
-            <h2 class="head-title">Multimedia Production</h2>
+            <h2 class="head-title">Multimedia Journalism</h2>
             <hr class="botm-line">
-            <p class="sec-para">Selection of my journalism works including photojournalism, personal-narrative writing, infographics and feature reporting.</p>
+            <p class="sec-para">Selection of my multimedia journalism works including interactive news, personal-narrative writing, infographics .</p>
           </div>
         </div>
         <div class="col-md-9 col-sm-12">
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <a href="name/name.html" target="new"><img src="img/name.gif" alt="" class="img-responsive" style="padding:7px;" width:"1020px" height="780px" ></a>
-              <p><strong> Narrative reporting</strong>: International Student Name Story</p>
+              <a href="http://www.medillnews847.com/jour320/spring18/final/bikelane/" target="new"><img src="img/cover.jpg" alt="" class="img-responsive" style="padding:7px;" width:"1020px" height="780px" ></a>
+              <p><strong> Interactive storytelling package</strong>: The Long Road</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <a href="https://medium.com/@danielzhou_70172/embarking-on-student-startups-pots-of-gold-or-bursting-bubbles-9957e294e257" target="new"><img src="img/startup.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> <strong>Feature reporting</strong>: Student Startup</p>
+              <a href="name/name.html" target="new"><img src="img/name.gif" alt="" class="img-responsive" style="padding:7px;" width:"1020px" height="780px" ></a>
+              <p> <strong>Narrative reporting</strong>: International Student Name Story</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
@@ -232,8 +231,8 @@
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <a href="https://northwesternbusinessreview.org/sports-expense-and-revenue-at-nu-e6bc6a595d14" target="new"><img src="img/sports.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> <strong>Infographics</strong>: NU Sports Expense and Revenue</p>
+              <a href="https://medium.com/@danielzhou_70172/embarking-on-student-startups-pots-of-gold-or-bursting-bubbles-9957e294e257" target="new"><img src="img/startup.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>Feature reporting</strong>: Student Startups</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
@@ -245,7 +244,7 @@
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
               <a href="http://www.scmp.com/business/companies/article/1971837/esg-new-buzzword-listed-fims-investors-hk-asia-regulations" target="new"><img src="img/esg.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> Assistance business reporting: ESG Regulation</p>
+              <p> <strong>Business reporting</strong>: ESG Regulation</p>
             </div>
           </div>
         </div>
@@ -303,43 +302,6 @@
       </div>
     </div>
 
-       <div class="container" id="interactive">
-      <div class="row">
-        <div class="col-md-3 col-sm-12">
-          <div class="section-title">
-            <h2 class="head-title">Interactive Journalism</h2>
-            <hr class="botm-line">
-            <p class="sec-para">Highlights of my class works from Journalism 320: Interactive Storytelling.</p>
-          </div>
-        </div>
-        <div class="col-md-9 col-sm-12">
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <a href="http://www.medillnews847.com/jour320/spring18/zhou/midterm/midterm.html" target="new"><img src="img/tony.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> <strong>Digital Package</strong>: Tony Awards Nomination and Northwestern</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <a href="http://www.medillnews847.com/jour320/spring18/zhou/dataviz/school.html" target="new"><img src="img/cps.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> Data Visualization: Competitive Admissions in Chicago Public Schools</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <a href="http://www.medillnews847.com/jour320/spring18/zhou/jq.html" target="new"><img src="img/steven.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> JQuery: Steven Spielberg to Produce his First DC Comic Film</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
-            <div class="portfolio-box design">
-              <a href="http://www.medillnews847.com/jour320/spring18/zhou/csshw.html" target="new"><img src="img/paul.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> CSS box model: Paul Ryan Quits Seeking Re-election</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 </section>
 
   <!---->
