--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="col-md-9 col-sm-12">
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <a href="https://drive.google.com/file/d/1h5SNucAh5E_W_6qIg6mp_f4UZ4bN7EGz/view?usp=sharing" target="new"><img src="img/bike.jpg" alt="" class="img-responsive" style="padding:7px;" width=""></a>
+              <a href="https://drive.google.com/file/d/1h5SNucAh5E_W_6qIg6mp_f4UZ4bN7EGz/view?usp=sharing" target="new"><img src="img/bikelane.jpg" alt="" class="img-responsive" style="padding:7px;" width=""></a>
               <p> <strong>Presentation:</strong> Bikeshare Data Regression Model Analysis</p>
             </div>
           </div>
