--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
             </div>
             <div class="icon-text">
               <h3 class="txt-tl">Investment Research</h3>
-              <p class="txt-para">- Professional experience in <strong>Quantitative Portfolio Analytics and M&A Research with professional database such as Morningstar Direct,
-                CapitalIQ and CRSP</strong> through internship at Morningstar, CDI Global and Kellogg School of Management</p>
+              <p class="txt-para">- Professional experience in <strong>Quantitative Portfolio Analytics and M&A Research</strong> with professional database such as Morningstar Direct,
+                CapitalIQ and CRSP through internship at Morningstar, CDI Global and Kellogg School of Management</p>
               <p class="txt-para">- Member of <strong>the Financial Economics Certificate Program</strong>, the most competitive and selective undergraduate academic curriculum on campus </p>
             </div>
           </div>
