--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="row">
         <div class="col-md-3 col-sm-12">
           <div class="section-title">
-            <h2 class="head-title">Data Projects</h2>
+            <h2 class="head-title">Data Innovation Projects</h2>
             <hr class="botm-line">
             <p class="sec-para">Data Science analytics projects, conducted through R, js, blender, html.</p>
           </div>
@@ -173,8 +173,8 @@
         <div class="col-md-9 col-sm-12">
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <a href="https://drive.google.com/file/d/1h5SNucAh5E_W_6qIg6mp_f4UZ4bN7EGz/view?usp=sharing" target="new"><img src="img/bike.jpg" alt="" class="img-responsive" style="padding:7px;" width=""></a>
-              <p> <strong>Presentation:</strong> Bikeshare Data Regression Model Analysis</p>
+              <a href="https://danielzzhou.github.io/datascience-bikeshare/" target="new"><img src="img/bike.jpg" alt="" class="img-responsive" style="padding:7px;" width=""></a>
+              <p> <strong>Post:</strong> Bikeshare Data Regression Model Analysis</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
