--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="section-title">
             <h2 class="head-title">Data Innovation Projects</h2>
             <hr class="botm-line">
-            <p class="sec-para">Data Science analytics projects, conducted through R, js, blender, html.</p>
+            <p class="sec-para">Examples of my data Science and innovation projects using public data, conducted through R, js, blender, html.</p>
           </div>
         </div>
         <div class="col-md-9 col-sm-12">
@@ -230,7 +230,7 @@
               <p> <strong>Infographics</strong>: Sustainable Investing and Environmental Index</p>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 padding-right-zero">
+<!--           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
               <a href="https://medium.com/@danielzhou_70172/embarking-on-student-startups-pots-of-gold-or-bursting-bubbles-9957e294e257" target="new"><img src="img/startup.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
               <p> <strong>Feature reporting</strong>: Student Startups</p>
@@ -247,7 +247,7 @@
               <a href="http://www.scmp.com/business/companies/article/1971837/esg-new-buzzword-listed-fims-investors-hk-asia-regulations" target="new"><img src="img/esg.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
               <p> <strong>Business reporting</strong>: ESG Regulation</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
