--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <br>
           <br>
           <br>
-          <h2 >Data Science · Journalism · Financial Economics</h4>
+          <h2 >Data Science · Financial Economics · Journalism </h4>
           <h3 class="title">Daniel Zhou</h3>
           <h4 class="sub-title">Playing with Data and Shapes</h4>
           <a href="#cta-1"><button type="submit" class="btn btn-submit">explore</button></a>
@@ -86,7 +86,7 @@
                       <br>
             <hr class="botm-line">
             <p class="sec-para">Hi there!</p>
-            <p class="sec-para">I am a senior at Northwestern University studying <strong> journalism, statistics and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
+            <p class="sec-para">I am a senior at Northwestern University studying <strong> statistic, journalism and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
 <p>I am an interdisciplinary problem solver interested in the crossroad of quantitative analytics and qualitative storytelling. </p>
           </div>
         </div>
