--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <br>
             <hr class="botm-line">
             <p class="sec-para">Hi there!</p>
-            <p class="sec-para">I am a senior at Northwestern University studying <strong> statistic, journalism and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
+            <p class="sec-para">I am a senior at Northwestern University studying <strong> statistics, journalism and economics</strong>, with a Kellogg certificate in <strong>financial economics.</strong></p> 
 <p>I am an interdisciplinary problem solver interested in the crossroad of quantitative analytics and qualitative storytelling. </p>
           </div>
         </div>
