--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <i class="fa fa-bar-chart"></i>
             </div>
             <div class="icon-text">
-              <h3 class="txt-tl">Data Analytics</h3>
+              <h3 class="txt-tl">Data Science</h3>
               <p class="txt-para">- Proficient in <strong>R, Python, SQL, Excel, Tableau, SAS, Stata, ArcGIS</strong> </p>
               <p class="txt-para">- Experienced in areas of Machine Learning such as  <strong>predictive modeling, cluster analysis,
                 classification,</strong> and Data Quality Assurance </p>
