--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
           </div>
           <div class="col-md-4 col-sm-6 padding-right-zero">
             <div class="portfolio-box design">
-              <a href="https://studio.knightlab.com/projects/augmented-reality-visualization-tool/" target="new"><img src="img/ar.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
-              <p> <strong>API: </strong> AR Data Visualization Tool (Under Development)</p>
+              <a href="https://github.com/NUKnightLab/studio-ar-viz-tool" target="new"><img src="img/ar.jpg" alt="" class="img-responsive" style="padding:7px;"></a>
+              <p> <strong>API: </strong> AR Data Visualization Tool </p>
             </div>
           </div>
           </div>
